workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/OfertaGarantiaProduto__c.object-meta.xml
<CustomObject>
    <description>Objeto para armazenar as Garantias dos produtos das Ofertas.</description>
    <label>Oferta de Garantia Produto</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ofertas de Garantias Produto</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>