workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/CaracteristicaGarantia__c.field-meta.xml
<CustomField>
    <fullName>CaracteristicaGarantia__c</fullName>
    <formula>TEXT(GarantiaProduto__r.CaracteristicaGarantia__c)</formula>
    <label>Característica da Garantia</label>
    <type>Text</type>
</CustomField>