workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/Chave__c.field-meta.xml
<CustomField>
    <fullName>Chave__c</fullName>
    <description>Chave de correspondência ( Oferta__c + &apos;|&apos; + GarantiaProduto__c )</description>
    <label>Chave</label>
    <length>40</length>
    <type>Text</type>
</CustomField>