workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/DescricaoGarantia__c.field-meta.xml
<CustomField>
    <fullName>DescricaoGarantia__c</fullName>
    <formula>GarantiaProduto__r.Garantia__r.Descricao__c</formula>
    <label>Descrição Garantia</label>
    <type>Text</type>
</CustomField>