workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Fórmula (Cálculo do Valor do Capital)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>