workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/GarantiaCodigo__c.field-meta.xml
<CustomField>
    <fullName>GarantiaCodigo__c</fullName>
    <formula>GarantiaProduto__r.CodigoPlanoSusep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código da Garantia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>