workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/GarantiaProduto__c.field-meta.xml
<CustomField>
    <fullName>GarantiaProduto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Garantia do produto</label>
    <referenceTo>GarantiaProduto__c</referenceTo>
    <relationshipLabel>Ofertas de Garantias Produto</relationshipLabel>
    <relationshipName>Ofertas_de_Garantias_Produto</relationshipName>
    <type>Lookup</type>
</CustomField>