workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/Id_garantia__c.field-meta.xml
<CustomField>
    <fullName>Id_garantia__c</fullName>
    <label>Id garantia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>