workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/LimiteCapitalMaximoGarantia__c.field-meta.xml
<CustomField>
    <fullName>LimiteCapitalMaximoGarantia__c</fullName>
    <formula>GarantiaProduto__r.LimiteCapitalMaximo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limite de Capital Máximo da Garantia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>