workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/LimiteCapitalMinimoGarantia__c.field-meta.xml
<CustomField>
    <fullName>LimiteCapitalMinimoGarantia__c</fullName>
    <formula>GarantiaProduto__r.LimiteCapitalMinimo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limite de Capital Mínimo da Garantia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>