workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/LimiteMaximoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>LimiteMaximoCaracteristicaEspecial__c</fullName>
    <formula>GarantiaProduto__r.LimiteMaximoCaracteristicaEspecial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limite Máximo Característica Especial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>