workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/LimiteMinimoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>LimiteMinimoCaracteristicaEspecial__c</fullName>
    <formula>GarantiaProduto__r.LimiteMinimoCaracteristicaEspecial__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limite Mínimo Característica Especial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>