workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/NomeGarantia__c.field-meta.xml
<CustomField>
    <fullName>NomeGarantia__c</fullName>
    <formula>GarantiaProduto__r.Garantia__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Garantia do Produto</label>
    <type>Text</type>
</CustomField>