workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/Obrigatoria__c.field-meta.xml
<CustomField>
    <fullName>Obrigatoria__c</fullName>
    <formula>GarantiaProduto__r.Obrigatoria__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Garantia Obrigatória?</label>
    <type>Checkbox</type>
</CustomField>