workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/Oferta__c.field-meta.xml
<CustomField>
    <fullName>Oferta__c</fullName>
    <label>Oferta</label>
    <referenceTo>Oferta__c</referenceTo>
    <relationshipLabel>Ofertas de Garantias de Produto</relationshipLabel>
    <relationshipName>Ofertas_de_Garantias_Produto</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>