workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/RamoGarantia__c.field-meta.xml
<CustomField>
    <fullName>RamoGarantia__c</fullName>
    <formula>GarantiaProduto__r.RamoSeguro__r.Codigo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RamoGarantia</label>
    <type>Text</type>
</CustomField>