workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/TipoCalculo__c.field-meta.xml
<CustomField>
    <fullName>TipoCalculo__c</fullName>
    <inlineHelpText>Ao Selecionar Moeda, preencha o campo Valor do capital. Ao selecionar Fórmula, preencha o campo Fórmula (Cálculo do Valor do Capital)</inlineHelpText>
    <label>Tipo Cálculo de Capital</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Moeda</fullName>
            </value>
            <value>
                <fullName>Fórmula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>