workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/TipoCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>TipoCaracteristicaEspecial__c</fullName>
    <formula>TEXT(GarantiaProduto__r.TipoCaracteristicaEspecial__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de característica especial</label>
    <type>Text</type>
</CustomField>