workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/TipoProtecao__c.field-meta.xml
<CustomField>
    <fullName>TipoProtecao__c</fullName>
    <label>Tipo de proteção</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Família</fullName>
            </value>
            <value>
                <fullName>Imprevistos</fullName>
            </value>
            <value>
                <fullName>Doenças</fullName>
            </value>
            <value>
                <fullName>Renda</fullName>
            </value>
            <value>
                <fullName>Assistências e benefícios</fullName>
            </value>
            <value>
                <fullName>Viagem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>