workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/ValorCaracteristicaEspecial__c.field-meta.xml
<CustomField>
    <fullName>ValorCaracteristicaEspecial__c</fullName>
    <label>Valor da característica especial</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>