workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/fields/ValorGarantia__c.field-meta.xml
<CustomField>
    <fullName>ValorGarantia__c</fullName>
    <formula>if(GarantiaProduto__r.LimiteCapitalMaximo__c=GarantiaProduto__r.LimiteCapitalMinimo__c,GarantiaProduto__r.LimiteCapitalMaximo__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Garantia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>