workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/validationRules/BloquearEdicaoQuandoOfertaAtiva.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearEdicaoQuandoOfertaAtiva</fullName>
    <active>false</active>
    <description>Impede que a Oferta de Garantia seja editada quando ela está associada a uma Oferta Ativa.</description>
    <errorConditionFormula>AND(
			NOT(ISNEW()),
			NOT(ISBLANK(Oferta__c)),
			Oferta__r.Ativo__c = TRUE 
		 )</errorConditionFormula>
    <errorMessage>Esta Oferta de Garantia está associada a uma Oferta Ativa e por isso não pode ser editada.</errorMessage>
</ValidationRule>