workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/validationRules/ImpedeAlterarGarantiaObrigatoria.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeAlterarGarantiaObrigatoria</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
        ISCHANGED(GarantiaProduto__c  ),
        PRIORVALUE( Obrigatoria__c ))</errorConditionFormula>
    <errorDisplayField>GarantiaProduto__c</errorDisplayField>
    <errorMessage>Garantia obrigatória não pode ser alterada.</errorMessage>
</ValidationRule>