workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/validationRules/RV_Formula_Informado_SE_FORMULA.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_Formula_Informado_SE_FORMULA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(TipoCalculo__c,&quot;Fórmula&quot;),
				ISBLANK(Formula__c)
)</errorConditionFormula>
    <errorMessage>Fórmula (Cálculo do Valor do Capital) deve ser preenchido!</errorMessage>
</ValidationRule>