workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/validationRules/RV_Valor_Capital_Informado_SE_MOEDA.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_Valor_Capital_Informado_SE_MOEDA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(TipoCalculo__c,&quot;Moeda&quot;),
				ISBLANK(Valor__c)
)</errorConditionFormula>
    <errorMessage>Valor do Capital deve ser preenchido!</errorMessage>
</ValidationRule>