workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/validationRules/ValidaMoedaDaGarantia.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaMoedaDaGarantia</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt;  TEXT(GarantiaProduto__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Moeda da oferta não pode ser diferente da moeda da garantia do produto</errorMessage>
</ValidationRule>