workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/validationRules/ValidaProdutoOferta.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaProdutoOferta</fullName>
    <active>true</active>
    <errorConditionFormula>IF( GarantiaProduto__r.Produto__c =  Oferta__r.Produto__c , False, True)</errorConditionFormula>
    <errorDisplayField>GarantiaProduto__c</errorDisplayField>
    <errorMessage>A garantia selecionada não pertence ao produto selecionado na oferta.</errorMessage>
</ValidationRule>