workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/validationRules/ValidaValorInformado.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidaValorInformado</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	   NOT(ISBLANK(Valor__c)),
	   IF(
		     Valor__c &lt;= GarantiaProduto__r.LimiteCapitalMaximo__c  &amp;&amp; 
		     Valor__c  &gt;= GarantiaProduto__r.LimiteCapitalMinimo__c,
		     false, true
			   )
  )</errorConditionFormula>
    <errorDisplayField>Valor__c</errorDisplayField>
    <errorMessage>O valor Informado deve estar entre os limites de capita cadastrados na garantia do produto
associada.</errorMessage>
</ValidationRule>