workspace-sf/force-app/main/default/objects/OfertaGarantiaProduto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NomeGarantia__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Tudo</label>
</ListView>